err/ezfacebook.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ezfacebook'...
Listing './lib/python3.5/site-packages/ezfacebook/context'...
Listing './lib/python3.5/site-packages/ezfacebook/context/templatetags'...
Compiling './lib/python3.5/site-packages/ezfacebook/context/templatetags/_param_parser.py'...
***   File "./lib/python3.5/site-packages/ezfacebook/context/templatetags/_param_parser.py", line 73
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ezfacebook/helpers'...
Listing './lib/python3.5/site-packages/ezfacebook/lib'...
Listing './lib/python3.5/site-packages/ezfacebook/tests'...
Listing './lib/python3.5/site-packages/ezfacebook/tests/context'...
Listing './lib/python3.5/site-packages/ezfacebook/tests/context/templatetags'...
Listing './lib/python3.5/site-packages/ezfacebook/tests/helpers'...
Listing './lib/python3.5/site-packages/ezfacebook/tests/lib'...
Listing './lib/python3.5/site-packages/ezfacebook/tests/user'...
Listing './lib/python3.5/site-packages/ezfacebook/user'...
Listing './lib/python3.5/site-packages/ezfacebook-0.87.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
